@@ -1,0 +1,21 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:h="http://java.sun.com/jsf/html"
+  xmlns:pretty="http://ocpsoft.com/prettyfaces"  
+  xmlns:ui="http://java.sun.com/jsf/facelets">
+
+<head>
+  <title>Result Page</title>
+</head>
+
+<body>
+
+  <p>
+    Mapped view was rendered!
+  </p>
+
+</body>
+
+</html>
