@@ -25,6 +25,8 @@ Bugfixes:
 * Fixed incorrect handling of Spring AOP proxies during bean name lookup - thanks to mbenson for the patch #(119)
 * Dynaview: Parameter injection now correctly happens before view determination (#120)
 * Fixed decoding of quotation mark character. Thanks to Bruno Aranda for the patch. (#122)
+* Use equals() instead of matches() to compare URL with view-id. Thanks to mbenson for bringing this up.
+
 
 ------------------------------------
            VERSION 3.3.0
